--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,5 +11,8 @@
         pwd:<input type="password" name="mpassword">
         <input type="submit" value="로그인">
     </form>
+
+    <button onclick="location.href='/oauth2/authorization/naver'"> 네이버 </button>
+    <button onclick="location.href='/oauth2/authorization/kakao'"> 카카오 </button>
 </body>
 </html>
