--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<div th:text="${#authentication.principal}"></div>
+<div th:text="${#authentication.authorities}"></div>
     <H3>메인페이지</H3>
     <BUTTON ONclick="location.href='/member/login'">로그인</BUTTON>
 </body>
